@@ -1,3 +1,10 @@
+2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/grob-property-description.scm: Remove regular-distance-to.
+
+	* input/test/spacing-regular.ly:
+	* lily/regular-spacing-engraver.cc: Remove.
+	
 2002-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* Documentation/user/lilypond-book.itely: small cleanups
